--- a/responsive.css
+++ b/responsive.css
@@ -67,7 +67,8 @@
     }
 
     .pf-boxs {
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;;
     }
 
     .box1 {
